[gd_scene format=3]

[ext_resource type="Script" uid="uid://ef6g4sk2xpgn" path="res://menus/main_menu.gd" id="1_49ejdn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_49ejdn")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="Margin/VBox"]
text = "MAIN MENU"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 16)

[node name="NewGameButton" type="Button" parent="Margin/VBox"]
text = "New Game"

[node name="ContinueButton" type="Button" parent="Margin/VBox"]
text = "Continue"

[node name="LoadButton" type="Button" parent="Margin/VBox"]
text = "Load"

[node name="SettingsButton" type="Button" parent="Margin/VBox"]
text = "Settings"

[node name="QuitButton" type="Button" parent="Margin/VBox"]
text = "Quit"
